--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,10 @@
 {
-  "name": "functions",
-  "description": "Cloud Functions for Firebase",
+  "name": "backend",
+  "description": "Cloud Functions for Firebase (Hasiru Santhe Backend)",
+  "main": "index.js",
+  "engines": {
+    "node": "22"
+  },
   "scripts": {
     "lint": "eslint .",
     "serve": "firebase emulators:start --only functions",
@@ -9,17 +13,12 @@
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
-  "engines": {
-    "node": "22"
-  },
-  "main": "index.js",
   "dependencies": {
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
-    "eslint-config-google": "^0.14.0",
     "firebase-functions-test": "^3.1.0"
   },
   "private": true
