--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,7 @@
 {
   "functions": [
     {
-      "source": "functions",
+      "source": "backend",
       "codebase": "default",
       "ignore": [
         "node_modules",
@@ -24,6 +24,7 @@
     "ui": {
       "enabled": true,
       "port": 4000
-    }
+    },
+    "singleProjectMode": true
   }
 }
